# blackLAB

./: .gitignore  README.md  blacklab.sh  pyproject.toml
.github/: FUNDING.yml
config/: company.yaml  departments.yaml
docs/: market-map.md  orchestration-references.md  stack-decision.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/config/: campus-layout.json  organizationModel.ts
frontend/src/hooks/: useJsonResource.ts  useLiveRefresh.ts  useSolarTheme.ts
frontend/src/pages/: AutopilotPage.tsx  ConsolePage.tsx  LaunchPage.tsx  LoopDetailPage.tsx  LoopsPage.tsx  OverviewPage.tsx  RunDetailPage.tsx  RunsPage.tsx  SettingsPage.tsx
frontend/src/ui/: AgentCloud.tsx  AgentFloor.tsx  AgentRovers.tsx  AlertStack.tsx  CampusMonument.tsx  CityBuilding.tsx  ConsoleHUD.tsx  DataBeams.tsx  DepartmentInterior.tsx  EventFeedOverlay.tsx  GroundGrid.tsx  LoopRadar.tsx  MissionTicker.tsx  OfficeMap.tsx  PageHeader.tsx  ResourceState.tsx  Shell.tsx  StatusBadge.tsx  WorldCanvas.tsx  cityConstants.ts  projectMaturity.ts  roverPersona.ts
src/blacklab_factory/: __init__.py  agents.py  autopilot.py  cli.py  config.py  dashboard.py  engine.py  factory.py  launcher.py  models.py  operator_control.py  release_ops.py  resources.py  service.py  storage.py  web.py
src/blacklab_factory/static/: app.js  style.css
tests/: test_agents.py  test_autopilot.py  test_cli.py  test_factory.py  test_models.py  test_operator_web.py  test_release_ops.py  test_resources.py  test_service.py  test_web.py
(+16 files in other folders)
